test/types/range/bradc/promoteRange2.good
promoteRange2.chpl:1: error: Bounds of 'low..high' must be integers of compatible types.
